Fixed CLS caused by breadcrumbs scrollbar

--- a/web/css/abstracts/mixins/_breadcrumbs.less
+++ b/web/css/abstracts/mixins/_breadcrumbs.less
@@ -9,6 +9,10 @@
                 flex-wrap: nowrap;
                 white-space: nowrap;
                 overflow: auto;
+                scrollbar-width: none;
+                &::-webkit-scrollbar {
+                  display: none;
+                }
             }
         }
     }
